--- a/package.json
+++ b/package.json
@@ -6,7 +6,18 @@
   "private": false,
   "dependencies": {
     "@types/node": "^16.11.6",
-    "typescript": "^4.4.4"
+    "@types/jest": "24.0.18",
+    "typescript": "^4.4.4",
+    "@docknetwork/crypto-wasm": "file:../crypto-wasm",
+    "@typescript-eslint/eslint-plugin": "^5.0.0",
+    "@typescript-eslint/parser": "^5.0.0",
+    "eslint": "^8.0.0",
+    "eslint-plugin-import": "^2.20.2",
+    "jest": "^27.3.0",
+    "ts-jest": "^27.0.7",
+    "husky": "4.2.5",
+    "prettier": "2.0.4",
+    "pretty-quick": "2.0.1"
   },
   "devDependencies": {
     "ts-node": "^10.4.0"
