--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,6 +7,7 @@
         "moduleResolution": "node",
         "strict": true,
         "declaration": true,
+        "declarationMap": true,
         "downlevelIteration": true,
         "baseUrl": ".",
         "esModuleInterop": true,
