some doc and test
Signed-off-by: lovesh <lovesh.bond@gmail.com>

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,5 +18,10 @@
             "node"
           ]
     },
-    "include": ["./src"]
+    "include": ["./src"],
+    "exclude": [
+        "tests",
+        "lib",
+        "node_modules"
+    ]
 }
