--- a/package.json
+++ b/package.json
@@ -1,21 +1,27 @@
 {
   "name": "@docknetwork/crypto-wasm-ts",
-  "version": "0.1.0",
-  "main": "lib/index.js",
-  "typings": "lib/index.d.ts",
+  "version": "0.3.0",
+  "description": "Typescript abstractions over Dock's Rust crypto library's WASM wrapper",
+  "homepage": "https://github.com/docknetwork/crypto-wasm-ts",
+  "main": "lib/crypto-wasm-ts/src/index.js",
+  "typings": "lib/crypto-wasm-ts/src/index.d.ts",
   "scripts": {
-    "build": "tsc -p .",
+    "build": "tsc",
     "clean": "rm -rf lib/",
     "prepare": "husky install",
-    "pretty": "prettier --config .prettierrc 'src/**/*.ts' --write"
+    "pretty": "prettier --config .prettierrc 'src/**/*.ts' --write",
+    "test": "jest"
   },
   "license": "Apache-2.0",
   "private": false,
+  "files": [
+    "lib/*"
+  ],
+  "directories": {
+    "lib": "lib"
+  },
   "dependencies": {
-    "@docknetwork/crypto-wasm": "0.2.2",
-    "@types/jest": "24.0.18",
-    "@types/node": "^16.11.6",
-    "typescript": "^4.4.4"
+    "@docknetwork/crypto-wasm": "0.3.0"
   },
   "devDependencies": {
     "eslint-config-prettier": "^8.3.0",
@@ -28,6 +34,9 @@
     "prettier": "2.0.4",
     "pretty-quick": "2.0.1",
     "@typescript-eslint/eslint-plugin": "^5.3.0",
-    "@typescript-eslint/parser": "^5.3.0"
+    "@typescript-eslint/parser": "^5.3.0",
+    "@types/jest": "24.0.18",
+    "@types/node": "^16.11.6",
+    "typescript": "^4.4.4"
   }
 }
