--- a/.github/workspaces/test.yml
+++ b/.github/workspaces/test.yml
@@ -12,8 +12,8 @@ jobs:
     runs-on: ${{matrix.os}}
     strategy:
       matrix:
-        node-version: [14.x, 15.x, 16.x]
-        os: [ubuntu-latest]
+        node-version: [14.x, 16.x, 17.x]
+        os: [ubuntu-latest, macos-latest]
     steps:
       - uses: actions/checkout@v1
       - uses: actions/setup-node@v1
