--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@docknetwork/crypto-wasm-ts",
-  "version": "0.10.1",
+  "version": "0.11.0",
   "description": "Typescript abstractions over Dock's Rust crypto library's WASM wrapper",
   "homepage": "https://github.com/docknetwork/crypto-wasm-ts",
   "main": "lib/crypto-wasm-ts/src/index.js",
@@ -22,7 +22,7 @@
     "lib": "lib"
   },
   "dependencies": {
-    "@docknetwork/crypto-wasm": "0.8.0"
+    "@docknetwork/crypto-wasm": "file:/home/lovesh/dev/dock/crypto-wasm"
   },
   "devDependencies": {
     "eslint-config-prettier": "^8.3.0",
