--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "lib": "lib"
   },
   "dependencies": {
-    "@docknetwork/crypto-wasm": "file:/home/lovesh/dev/dock/crypto-wasm"
+    "@docknetwork/crypto-wasm": "0.9.0"
   },
   "devDependencies": {
     "eslint-config-prettier": "^8.3.0",
