--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@docknetwork/crypto-wasm-ts",
-  "version": "0.17.0",
+  "version": "0.18.0",
   "description": "Typescript abstractions over Dock's Rust crypto library's WASM wrapper",
   "homepage": "https://github.com/docknetwork/crypto-wasm-ts",
   "main": "lib/crypto-wasm-ts/src/index.js",
@@ -24,19 +24,21 @@
     "@docknetwork/crypto-wasm": "0.12.0"
   },
   "devDependencies": {
-    "eslint-config-prettier": "^8.3.0",
-    "husky": "^7.0.4",
-    "ts-node": "^10.4.0",
-    "jest": "^27.3.0",
-    "ts-jest": "^27.0.7",
-    "eslint": "^8.1.0",
-    "eslint-plugin-import": "^2.20.2",
-    "prettier": "2.0.4",
-    "pretty-quick": "2.0.1",
-    "@typescript-eslint/eslint-plugin": "^5.3.0",
-    "@typescript-eslint/parser": "^5.3.0",
+    "@types/flat": "^5.0.2",
     "@types/jest": "24.0.18",
     "@types/node": "^16.11.6",
-    "typescript": "^4.4.4"
+    "@typescript-eslint/eslint-plugin": "^5.3.0",
+    "@typescript-eslint/parser": "^5.3.0",
+    "eslint": "^8.1.0",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-import": "^2.20.2",
+    "flat": "^5.0.2",
+    "husky": "^7.0.4",
+    "jest": "^27.3.0",
+    "prettier": "2.7.1",
+    "pretty-quick": "3.1.3",
+    "ts-jest": "^27.0.7",
+    "ts-node": "^10.4.0",
+    "typescript": "^4.8.2"
   }
 }
