--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@docknetwork/crypto-wasm-ts",
-  "version": "0.20.0",
+  "version": "0.21.0",
   "description": "Typescript abstractions over Dock's Rust crypto library's WASM wrapper",
   "homepage": "https://github.com/docknetwork/crypto-wasm-ts",
   "main": "lib/crypto-wasm-ts/src/index.js",
@@ -21,7 +21,7 @@
     "lib": "lib"
   },
   "dependencies": {
-    "@docknetwork/crypto-wasm": "0.12.0"
+    "@docknetwork/crypto-wasm": "file:../crypto-wasm"
   },
   "devDependencies": {
     "@types/flat": "^5.0.2",
@@ -37,6 +37,7 @@
     "jest": "^27.3.0",
     "prettier": "2.7.1",
     "pretty-quick": "3.1.3",
+    "r1csfile": "^0.0.41",
     "ts-jest": "^27.0.7",
     "ts-node": "^10.4.0",
     "typescript": "^4.8.2"
