--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "@docknetwork/crypto-wasm": "0.15.0",
     "@types/flat": "^5.0.2",
     "flat": "^5.0.2",
-    "lzutf8": "^0.6.3"
+    "lzutf8": "^0.6.3",
+    "bs58": "5.0.0"
   },
   "devDependencies": {
     "@types/jest": "24.0.18",
