--- a/package.json
+++ b/package.json
@@ -24,9 +24,9 @@
   "dependencies": {
     "@docknetwork/crypto-wasm": "0.16.0",
     "@types/flat": "^5.0.2",
+    "bs58": "5.0.0",
     "flat": "^5.0.2",
-    "lzutf8": "^0.6.3",
-    "bs58": "5.0.0"
+    "lzutf8": "^0.6.3"
   },
   "devDependencies": {
     "@types/jest": "24.0.18",
@@ -38,6 +38,7 @@
     "eslint-plugin-import": "^2.20.2",
     "husky": "^7.0.4",
     "jest": "^27.3.0",
+    "jsonld": "^8.1.0",
     "prettier": "2.7.1",
     "pretty-quick": "3.1.3",
     "r1csfile": "^0.0.41",
