--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
   },
   "devDependencies": {
     "@types/jest": "24.0.18",
+    "@types/jsonld": "^1.5.7",
     "@types/node": "^16.11.6",
     "@typescript-eslint/eslint-plugin": "^5.3.0",
     "@typescript-eslint/parser": "^5.3.0",
@@ -38,7 +39,7 @@
     "eslint-plugin-import": "^2.20.2",
     "husky": "^7.0.4",
     "jest": "^27.3.0",
-    "jsonld": "^8.1.0",
+    "jsonld": "5.2.0",
     "prettier": "2.7.1",
     "pretty-quick": "3.1.3",
     "r1csfile": "^0.0.41",
