--- a/package.json
+++ b/package.json
@@ -8,9 +8,10 @@
   "scripts": {
     "build": "tsc",
     "clean": "rm -rf lib/",
+    "jest": "NODE_OPTIONS='--experimental-vm-modules' jest",
     "prepare": "husky install",
     "pretty": "prettier --config .prettierrc 'src/**/*.ts' --write",
-    "test": "jest",
+    "test": "NODE_OPTIONS='--experimental-vm-modules' jest",
     "buildAndPublish": "yarn clean && yarn build && yarn publish"
   },
   "license": "Apache-2.0",
@@ -39,7 +40,7 @@
     "eslint-plugin-import": "^2.20.2",
     "husky": "^7.0.4",
     "jest": "^27.3.0",
-    "jsonld": "5.2.0",
+    "jsonld": "6.0.0",
     "prettier": "2.7.1",
     "pretty-quick": "3.1.3",
     "r1csfile": "^0.0.41",
