--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@types/flat": "^5.0.2",
     "bs58": "5.0.0",
     "flat": "^5.0.2",
+    "json-pointer": "^0.6.2",
     "lzutf8": "^0.6.3"
   },
   "devDependencies": {
@@ -39,9 +40,9 @@
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-import": "^2.20.2",
     "husky": "^7.0.4",
-    "jsonschema": "1.4.1",
     "jest": "^27.3.0",
     "jsonld": "6.0.0",
+    "jsonschema": "1.4.1",
     "prettier": "2.7.1",
     "pretty-quick": "3.1.3",
     "r1csfile": "^0.0.41",
