--- a/package.json
+++ b/package.json
@@ -49,6 +49,6 @@
     "r1csfile": "^0.0.41",
     "ts-jest": "^27.0.7",
     "ts-node": "^10.4.0",
-    "typescript": "^4.8.2"
+    "typescript": "5.0.4"
   }
 }
