--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@docknetwork/crypto-wasm-ts",
-  "version": "0.33.4",
+  "version": "0.34.0",
   "description": "Typescript abstractions over Dock's Rust crypto library's WASM wrapper",
   "homepage": "https://github.com/docknetwork/crypto-wasm-ts",
   "main": "lib/index.js",
@@ -25,30 +25,31 @@
   "dependencies": {
     "@docknetwork/crypto-wasm": "^0.18.0",
     "@types/flat": "^5.0.2",
+    "@types/lodash": "^4.14.195",
     "bs58": "5.0.0",
     "flat": "^5.0.2",
     "json-pointer": "^0.6.2",
-    "lzutf8": "^0.6.3"
+    "lodash": "^4.17.21",
+    "lzutf8": "0.6.3"
   },
   "devDependencies": {
-    "@types/jest": "24.0.18",
+    "@types/jest": "^29.1.0",
     "@types/jsonld": "^1.5.7",
-    "@types/node": "^16.11.6",
-    "@typescript-eslint/eslint-plugin": "^5.3.0",
-    "@typescript-eslint/parser": "^5.3.0",
+    "@types/node": "^16.18.34",
+    "@typescript-eslint/eslint-plugin": "^5.59.9",
+    "@typescript-eslint/parser": "^5.59.9",
     "commander": "^10.0.1",
-    "eslint": "^8.1.0",
-    "eslint-config-prettier": "^8.3.0",
-    "eslint-plugin-import": "^2.20.2",
+    "eslint": "^8.42.0",
+    "eslint-config-prettier": "^8.8.0",
+    "eslint-plugin-import": "^2.27.5",
     "husky": "^7.0.4",
-    "jest": "^27.3.0",
+    "jest": "^29.1.0",
     "jsonld": "6.0.0",
     "jsonschema": "1.4.1",
-    "prettier": "2.7.1",
-    "pretty-quick": "3.1.3",
+    "prettier": "2.8.8",
     "r1csfile": "^0.0.41",
-    "ts-jest": "^27.0.7",
-    "ts-node": "^10.4.0",
-    "typescript": "5.0.4"
+    "ts-jest": "^29.1.0",
+    "ts-node": "^10.9.1",
+    "typescript": "5.1.3"
   }
 }
