--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@docknetwork/crypto-wasm-ts",
-  "version": "0.34.0",
+  "version": "0.35.0",
   "description": "Typescript abstractions over Dock's Rust crypto library's WASM wrapper",
   "homepage": "https://github.com/docknetwork/crypto-wasm-ts",
   "main": "lib/index.js",
@@ -12,7 +12,10 @@
     "prepare": "husky install",
     "pretty": "prettier --config .prettierrc 'src/**/*.ts' --write",
     "test": "yarn jest",
-    "buildAndPublish": "yarn clean && yarn build && yarn publish"
+    "buildAndPublish": "yarn clean && yarn build && yarn publish",
+    "test-bbs+": "TEST_SIGNATURE_SCHEME=BBS+ yarn jest",
+    "test-ps": "TEST_SIGNATURE_SCHEME=PS yarn jest",
+    "test-all": "TEST_SIGNATURE_SCHEME=BBS yarn jest; TEST_SIGNATURE_SCHEME=BBS+ yarn jest; TEST_SIGNATURE_SCHEME=PS yarn jest"
   },
   "license": "Apache-2.0",
   "private": false,
@@ -23,7 +26,7 @@
     "lib": "lib"
   },
   "dependencies": {
-    "@docknetwork/crypto-wasm": "^0.18.0",
+    "@docknetwork/crypto-wasm": "0.19.0",
     "@types/flat": "^5.0.2",
     "@types/lodash": "^4.14.195",
     "bs58": "5.0.0",
