--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@docknetwork/crypto-wasm-ts",
-  "version": "0.43.1",
+  "version": "0.44.0",
   "description": "Typescript abstractions over Dock's Rust crypto library's WASM wrapper",
   "homepage": "https://github.com/docknetwork/crypto-wasm-ts",
   "main": "lib/index.js",
@@ -33,7 +33,8 @@
     "flat": "^5.0.2",
     "json-pointer": "^0.6.2",
     "lodash": "^4.17.21",
-    "lzutf8": "0.6.3"
+    "lzutf8": "0.6.3",
+    "semver": "^7.5.4"
   },
   "devDependencies": {
     "@types/jest": "^29.1.0",
