--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -69,3 +69,19 @@ jobs:
           node-version: ${{ matrix.node-version }}
       - run: yarn install --frozen-lockfile
       - run: yarn test
+  test_bddt16:
+    name: Test BDDT16
+    runs-on: ${{matrix.os}}
+    env:
+      TEST_SIGNATURE_SCHEME: 'BDDT16'
+    strategy:
+      matrix:
+        node-version: [ 16.x, 20.x ]
+        os: [ ubuntu-latest ]
+    steps:
+      - uses: actions/checkout@v1
+      - uses: actions/setup-node@v1
+        with:
+          node-version: ${{ matrix.node-version }}
+      - run: yarn install --frozen-lockfile
+      - run: yarn test
