--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "test-bbs+": "TEST_SIGNATURE_SCHEME=BBS+ yarn jest",
     "test-ps": "TEST_SIGNATURE_SCHEME=PS yarn jest",
     "test-bbdt16": "TEST_SIGNATURE_SCHEME=BBDT16 yarn jest",
-    "test-all": "TEST_SIGNATURE_SCHEME=BBS yarn jest; TEST_SIGNATURE_SCHEME=BBS+ yarn jest; TEST_SIGNATURE_SCHEME=PS yarn jest; TEST_SIGNATURE_SCHEME=BBDT16 yarn jest",
+    "test-all": "yarn test-bbs && yarn test-bbs+ && yarn test-ps && yarn test-bbdt16",
     "typedoc": "typedoc src --plugin typedoc-github-theme --out __typedoc__"
   },
   "license": "Apache-2.0",
