--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -15,10 +15,11 @@ jobs:
         node-version: [18.x, 20.x]
         os: [ubuntu-latest, macos-latest]
     steps:
-      - uses: actions/checkout@v3
-      - uses: actions/setup-node@v3
+      - uses: actions/checkout@v6
+      - uses: actions/setup-node@v6
         with:
           node-version: ${{ matrix.node-version }}
+      - run: corepack enable
       - run: yarn install --frozen-lockfile
       - run: yarn build
   test_bbs:
@@ -31,10 +32,11 @@ jobs:
         node-version: [18.x, 20.x]
         os: [ubuntu-latest]
     steps:
-      - uses: actions/checkout@v3
-      - uses: actions/setup-node@v3
+      - uses: actions/checkout@v6
+      - uses: actions/setup-node@v6
         with:
           node-version: ${{ matrix.node-version }}
+      - run: corepack enable
       - run: yarn install --frozen-lockfile
       - run: yarn test
   test_bbs_plus:
@@ -47,10 +49,11 @@ jobs:
         node-version: [18.x, 20.x]
         os: [ubuntu-latest]
     steps:
-      - uses: actions/checkout@v3
-      - uses: actions/setup-node@v3
+      - uses: actions/checkout@v6
+      - uses: actions/setup-node@v6
         with:
           node-version: ${{ matrix.node-version }}
+      - run: corepack enable
       - run: yarn install --frozen-lockfile
       - run: yarn test
   test_ps:
@@ -63,10 +66,11 @@ jobs:
         node-version: [18.x, 20.x]
         os: [ubuntu-latest]
     steps:
-      - uses: actions/checkout@v3
-      - uses: actions/setup-node@v3
+      - uses: actions/checkout@v6
+      - uses: actions/setup-node@v6
         with:
           node-version: ${{ matrix.node-version }}
+      - run: corepack enable
       - run: yarn install --frozen-lockfile
       - run: yarn test
   test_bbdt16:
@@ -79,9 +83,11 @@ jobs:
         node-version: [18.x, 20.x ]
         os: [ ubuntu-latest ]
     steps:
-      - uses: actions/checkout@v3
-      - uses: actions/setup-node@v3
+      - uses: actions/checkout@v6
+      - uses: actions/setup-node@v6
         with:
           node-version: ${{ matrix.node-version }}
+      - run: corepack enable
       - run: yarn install --frozen-lockfile
       - run: yarn test
+  
