--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -9,16 +9,16 @@ on:
 jobs:
   build:
     name: Build
-    runs-on: [ubuntu-latest, macos-latest]
+    runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        node-version: [20.x, 22.x]
+        node-version: [22.x, 24.x, 25.x]
+        os: [ubuntu-latest, macos-latest]
     steps:
       - uses: actions/checkout@v6
       - uses: actions/setup-node@v6
         with:
           node-version: ${{ matrix.node-version }}
-          cache: 'yarn'
       - run: corepack enable
       - run: yarn install --immutable
       - run: yarn build
@@ -32,7 +32,6 @@ jobs:
       - uses: actions/setup-node@v6
         with:
           node-version: latest
-          cache: 'yarn'
       - run: corepack enable
       - run: yarn install --immutable
       - run: yarn build
@@ -57,9 +56,7 @@ jobs:
       - uses: actions/setup-node@v6
         with:
           node-version: ${{ matrix.node-version }}
-          cache: 'yarn'
       - run: corepack enable
       - run: yarn install --immutable
       - run: yarn build
-      - name: Run tests
-        run: yarn test
+      - run: yarn test
